--- a/src/styles/room.scss
+++ b/src/styles/room.scss
@@ -12,8 +12,18 @@
     
             > img {
                 max-height: 45px;
-            }    
+            }  
+            
+            > div {
+                display: flex;
+                gap: 16px;
+    
+                button {
+                    height: 40px;
+                }
+            }
         }
+
     }
 
     .content{
@@ -54,6 +64,7 @@
 
         form{
             min-width: 700px;
+            margin-bottom: 14px;
             textarea{
                 width: 100%;
                 border: 0;
