--- a/src/styles/question.scss
+++ b/src/styles/question.scss
@@ -11,6 +11,19 @@
         margin-top: 8px;
     }
 
+    &.highlighted{
+        background: #f4f0ff;
+        border: 1px solid #835afd;
+
+        footer .user-info span{
+            color: #29292e;
+        }
+    }
+
+    &.answered{
+        background: #dbdcdd;
+    }
+
     p{
         color: #29292e;
         margin-top: 8px;
@@ -21,6 +34,7 @@
         justify-content: space-between;
         align-items: center;
         margin-top: 24px;
+        margin-bottom: 10px;
 
         .user-info{
             display: flex;
@@ -37,6 +51,11 @@
                 color: #737380;
                 font-size: 14px;
             }
+        }
+
+        > div{
+            display: flex;
+            gap: 8px;    
         }
 
         button {
